--- a/docker_kafka-spark-elasticsearch/docker-compose.yml
+++ b/docker_kafka-spark-elasticsearch/docker-compose.yml
@@ -1,29 +1,15 @@
 version: '3'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    hostname: zookeeper
-    ports:
-      - "2181:2181"
-    environment:
-      - ZOOKEEPER_CLIENT_PORT=2181
-      - ZOOKEEPER_TICK_TIME=2000
-    networks:
-      - mynetwork
-
+    image: wurstmeister/zookeeper
+ 
   kafka:
-    image: confluentinc/cp-kafka:latest
-    hostname: kafka
+    image: wurstmeister/kafka
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-    depends_on:
-      - zookeeper
-    networks:
-      - mynetwork
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
 
   pyspark:
     image: jupyter/pyspark-notebook:latest
@@ -38,19 +24,3 @@ services:
     # command: bash -c "pip install kafka-python && spark-submit --packages org.apache.spark:spark-sql-kafka-0-10_2.12:3.1.2 /home/jovyan/work/mycode.py"
     depends_on:
       - kafka
-    networks:
-      - mynetwork
-
-  elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.0
-    hostname: elasticsearch
-    ports:
-      - "9200:9200"
-    environment:
-      - discovery.seed_hosts=elasticsearch
-    networks:
-      - mynetwork
-
-networks:
-  mynetwork:
-    driver: bridge
